# scenex

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/scenex/adaptors/pygfx/: _camera.py  _image.py
src/scenex/model/: _evented_list.py  transform.py  view.py
src/scenex/model/nodes/: camera.py  node.py
